# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/go/go_binary.gni")
import("//build/go/go_library.gni")

go_library("config") {
  name = "config"
  source_dir = "$root_gen_dir/go-proto-gen/src/third_party/cobalt/config"
  non_go_deps = [ "//third_party/cobalt/config:cobalt_config_proto" ]
}

go_library("lib") {
  name = "config_parser"

  deps = [
    "//garnet/public/go/third_party:github.com/golang/glog",
    "//garnet/public/go/third_party:github.com/golang/protobuf",
    "//garnet/public/go/third_party:github.com/go-yaml/yaml",
    ":config",
  ]
}

go_binary("bin") {
  gopackage = "config_parser"
  output_name = "config_parser"

  extra_dependencies = [
    ":lib"
  ]
}
